feature: progress in binnacle

--- a/bitacora investigacion/29_12.md
+++ b/bitacora investigacion/29_12.md
@@ -32,5 +32,28 @@ Tasks for the next meeting:
 
 - Study the loss functions and identify the similarities with the intrinsic learning paper.
 
-- Run the new environment where the cookie cannot does not respawn once it is placed on the grid.
+- Run the new environment where the cookie does not respawn once it is placed on the grid.
  
+
+
+
+
+# Progress 29/12/2025
+- Read and summary of the paper curiosity driven exploration. There is the intrinsic reward made the difference between 
+the latent of the expected image and the latent of the real image. 
+- The deterministics tasks with partial observation didn't learned how to get the cookie
+- The cookie without respawn was runned. The algorithm learned how to get to the cookie.
+
+Runs:
+- `ts -G 1 bash run_gpu.sh python3 dreamerv3/main.py --logdir ~/logdir/dreamer/cookiepedrodeterministic18x29/size12m/07 --configs cookiepedrodeterministic size12m --run.steps 1000000 --task cookiepedrodeterministic_18x29 --run.save_every 42` and `ts -G 1 bash run_gpu.sh python3 dreamerv3/main.py --logdir ~/logdir/dreamer/cookiepedrodeterministic18x29/size12m/08 --configs cookiepedrodeterministic size12m --run.steps 1000000 --task cookiepedrodeterministic_18x29 --run.save_every 42`.  The algorithm didn't get the cookie.
+
+
+- `ts -G 1 bash run_gpu.sh python3 dreamerv3/main.py --logdir ~/logdir/dreamer/cookiepedrofullfixed18x29/size12m/01 --configs cookiepedrofullfixed size12m --run.steps 1000000 --task cookiepedrofullfixed_18x29 --run.save_every 42`. The full observation was set wrongly to partial observation. 
+
+- `ts -G 1 bash run_gpu.sh python3 dreamerv3/main.py --logdir ~/logdir/dreamer/cookiepedrofullfixed18x29/size12m/02 --configs cookiepedrofullfixed size12m --run.steps 1000000 --task cookiepedrofullfixed_18x29 --run.save_every 42`. The empty was the incorrect one
+
+- `ts -G 1 bash run_gpu.sh python3 dreamerv3/main.py --logdir ~/logdir/dreamer/cookiepedrofullfixed18x29/size12m/03 --configs cookiepedrofullfixed size12m --run.steps 1000000 --task cookiepedrofullfixed_18x29 --run.save_every 42`. The observation was setted to full observation and the algorithm learned how to get the cookies.
+
+
+# Progress 02/01/2026
+- 
