feature: creating working PPO RND

--- a/papers_summary/template_summary.tex
+++ b/papers_summary/template_summary.tex
@@ -6,7 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-\usepackage[spanish]{babel}
+\usepackage[english]{babel}
 
 \usepackage{amsmath, amssymb}
 \usepackage{graphicx}
@@ -29,7 +29,7 @@
 \usepackage{setspace}
 \onehalfspacing
 
-\title{\textbf{Resumen del Paper:}\\
+\title{\textbf{Summary of the paper:}\\
 \large }
 
 \author{Ignacio Monardes}
@@ -40,39 +40,39 @@
 
 \maketitle
 
-\section*{Referencia}
+\section*{Reference}
 \noindent
-\textbf{Autores:}  \\
-\textbf{Título:} \textit{} \\
-\textbf{Conferencia/Journal:}  \\
+\textbf{Authors:}  \\
+\textbf{Title:} \textit{} \\
+\textbf{Conference/Journal:}  \\
 \textbf{Link:} \url{}
 
-\section{Motivación}
-\subsection{Problema presente} 
+\section{Motivation}
+\subsection{Current problem} 
 
-\subsection{Relevancia del problema}
+\subsection{Relevance of the problem}
 
-\subsection{Agujero en la literatura / limitaciones previas}
+\subsection{Hole in the literature / previous limitations}
 
 
-\section{Idea Principal}
-\subsection{Idea concisa}
+\section{Idea}
+\subsection{Main Idea}
    
-\subsection{Innovación}
+\subsection{Innovation}
 
-\section{Metodología}
+\section{Methodology}
 
-\subsection{Modelamiento} 
+\subsection{Modeling} 
 
 
 \subsection{Assumptions}
     
 
-\subsection{Arquitectura}
+\subsection{Architecture}
 
 
-\section{Experimentos}
-\subsection{Entornos o datasets}
+\section{Experiments}
+\subsection{Environments and datasets}
     
 
 \subsection{Baselines}
@@ -81,29 +81,27 @@
 \subsection{Settings}
 
 
-\subsection{Nuevos escenarios}
+
+\section{Results}
 
 
-\section{Resultados}
+\subsection{Good and bad performance in different scenarios}
 
+\section{Critical Discussion}
+\subsection{Strength}
 
-\subsection{¿En qué escenarios funciona mejor / peor?}
+\subsection{Weakness} 
 
-\section{Discusión Crítica}
-\subsection{Fortalezas}
+\subsection{Questionable assumptions} 
 
-\subsection{Debilidades} 
+\subsection{What it is not clear} 
 
-\subsection{Supuestos cuestionables} 
+\section{Conclusions}
 
-\subsection{Qué no queda claro} 
+\section*{Personal opinion}
+\subsection{¿Is it a good contribution?}
 
-\section{Conclusiones}
-
-\section*{Comentario Personal}
-\subsection{¿Es una buena contribución?}
-
-\subsection{¿Lo usaría en mi investigación?}
+\subsection{¿Would I use it on my investigation?}
 
 
 \bibliographystyle{plain}
