--- a/papers_summary/template_summary.tex
+++ b/papers_summary/template_summary.tex
@@ -14,6 +14,34 @@
 \usepackage{hyperref}
 \usepackage{cite}
 
+% Code
+\usepackage{xcolor}
+\usepackage{listings}
+\usepackage{caption}
+\renewcommand{\lstlistingname}{Algorithm}
+
+\definecolor{codebg}{rgb}{0.95,0.95,0.95}
+\definecolor{keyword}{rgb}{0.13,0.29,0.53}
+\definecolor{comment}{rgb}{0,0.5,0}
+\definecolor{string}{rgb}{0.58,0,0.82}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{codebg},
+    basicstyle=\ttfamily\footnotesize,
+    keywordstyle=\color{keyword}\bfseries,
+    commentstyle=\color{comment}\itshape,
+    stringstyle=\color{string},
+    numbers=left,
+    numberstyle=\tiny,
+    stepnumber=1,
+    frame=single,
+    breaklines=true,
+    tabsize=2,
+    showstringspaces=false
+}
+
+\lstset{style=mystyle}
+
 
 
 % Márgenes
@@ -63,7 +91,14 @@
 \section{Methodology}
 
 \subsection{Modeling} 
+\begin{lstlisting}[language=Python, caption={Hello world}]
+import numpy as np
 
+def hello():
+    print("Ahora si con colores")
+
+hello()
+\end{lstlisting}
 
 \subsection{Assumptions}
     
