feature: adding HER documentation

--- a/papers_summary/template_summary.tex
+++ b/papers_summary/template_summary.tex
@@ -134,9 +134,9 @@ hello()
 \section{Conclusions}
 
 \section*{Personal opinion}
-\subsection{¿Is it a good contribution?}
+\subsection{Is it a good contribution?}
 
-\subsection{¿Would I use it on my investigation?}
+\subsection{Would I use it on my investigation?}
 
 
 \bibliographystyle{plain}
